--- a/package.json
+++ b/package.json
@@ -13,6 +13,7 @@
     "express-session": "^1.17.1",
     "hbs": "~4.0.4",
     "http-errors": "~1.6.3",
+    "minimist": "^1.2.5",
     "morgan": "~1.9.1",
     "mysql": "^2.18.1",
     "nodemailer": "^6.4.10",
