--- a/package.json
+++ b/package.json
@@ -14,6 +14,7 @@
     "express-session": "^1.17.1",
     "hbs": "^4.1.1",
     "http-errors": "~1.6.3",
+    "jsonwebtoken": "^8.5.1",
     "minimist": "^1.2.5",
     "mongoose": "^5.10.6",
     "morgan": "~1.9.1",
