--- a/package.json
+++ b/package.json
@@ -17,9 +17,11 @@
     "jsonwebtoken": "^8.5.1",
     "minimist": "^1.2.5",
     "mongoose": "^5.10.6",
+    "mongoose-paginate-v2": "^1.3.9",
     "morgan": "~1.9.1",
     "mysql": "^2.18.1",
     "nodemailer": "^6.4.10",
+    "nodemon": "^2.0.6",
     "util": "^0.12.3"
   }
 }
